[package]
name = "secmonitor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc = "0.0.32"
bollard = "0.13.0"
ctrlc = "3.2.2"
tokio = "1.19.2"
lazy_static = "1.4.0"
serde_json = "1.0.82"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
clap = { version = "3.2.17", features = ["derive"] }
